3tier/cfn/dev-3Tier-App.template.yaml
Resources:
  dev3Tierinternalsg54F660BD:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: dev-3Tier-App/dev-3Tier-internal-sg
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: Allow from anyone on port 8080
          FromPort: 8080
          IpProtocol: tcp
          ToPort: 8080
      Tags:
        - Key: Name
          Value: dev-3Tier-internal-sg
      VpcId:
        Fn::ImportValue: dev-3Tier-Root:VPCVpcId2F75874A
    Metadata:
      aws:cdk:path: dev-3Tier-App/dev-3Tier-internal-sg/Resource
  dev3Tierinternalsgfromdev3TierAppwebSgF4A86D658080690BDD37:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: from dev3TierAppwebSgF4A86D65:8080
      FromPort: 8080
      GroupId:
        Fn::GetAtt:
          - dev3Tierinternalsg54F660BD
          - GroupId
      SourceSecurityGroupId:
        Fn::ImportValue: dev-3Tier-Web:dev3TierwebSecurityGroupId830DAA5E
      ToPort: 8080
    Metadata:
      aws:cdk:path: dev-3Tier-App/dev-3Tier-internal-sg/from dev3TierAppwebSgF4A86D65:8080
  dev3TierinternalF413AEF5:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      LoadBalancerAttributes:
        []
      Name: dev-3Tier-internal
      Scheme: internal
      SecurityGroups:
        - Fn::GetAtt:
            - dev3Tierinternalsg54F660BD
            - GroupId
      Subnets:
        - Fn::Select:
            - 0
            - Fn::Split:
                - ","
                - Fn::ImportValue: dev-3Tier-Root:VPCIsolatedSubnetIDs0BAB2DBD
        - Fn::Select:
            - 1
            - Fn::Split:
                - ","
                - Fn::ImportValue: dev-3Tier-Root:VPCIsolatedSubnetIDs0BAB2DBD
      Type: application
    Metadata:
      aws:cdk:path: dev-3Tier-App/dev-3Tier-internal/Resource
  dev3Tierinternallistener07E2D1FD:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - TargetGroupArn:
            Ref: dev3TierinternallistenerfleetGroup7C212424
          Type: forward
      LoadBalancerArn:
        Ref: dev3TierinternalF413AEF5
      Port: 8080
      Protocol: HTTP
      Certificates:
        []
    Metadata:
      aws:cdk:path: dev-3Tier-App/dev-3Tier-internal/listener/Resource
  dev3TierinternallistenerfleetGroup7C212424:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Port: 8080
      Protocol: HTTP
      VpcId:
        Fn::ImportValue: dev-3Tier-Root:VPCVpcId2F75874A
      TargetGroupAttributes:
        []
      Targets:
        []
      TargetType: instance
    Metadata:
      aws:cdk:path: dev-3Tier-App/dev-3Tier-internal/listener/fleetGroup/Resource
  dev3TierappasgInstanceSecurityGroupCD8FE5A9:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: dev-3Tier-App/dev-3Tier-app-asg/InstanceSecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        []
      Tags:
        - Key: Name
          Value: dev-3Tier-App/dev-3Tier-app-asg
      VpcId:
        Fn::ImportValue: dev-3Tier-Root:VPCVpcId2F75874A
    Metadata:
      aws:cdk:path: dev-3Tier-App/dev-3Tier-app-asg/InstanceSecurityGroup/Resource
  dev3TierappasgInstanceSecurityGroupfromdev3TierAppdev3Tierinternalsg26D01EA48080D47181F2:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: Load balancer to target
      FromPort: 8080
      GroupId:
        Fn::GetAtt:
          - dev3TierappasgInstanceSecurityGroupCD8FE5A9
          - GroupId
      SourceSecurityGroupId:
        Fn::GetAtt:
          - dev3Tierinternalsg54F660BD
          - GroupId
      ToPort: 8080
    Metadata:
      aws:cdk:path: dev-3Tier-App/dev-3Tier-app-asg/InstanceSecurityGroup/from
        dev3TierAppdev3Tierinternalsg26D01EA4:8080
  dev3TierappasgInstanceRole0D6C703A:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
        Version: "2012-10-17"
    Metadata:
      aws:cdk:path: dev-3Tier-App/dev-3Tier-app-asg/InstanceRole/Resource
  dev3TierappasgInstanceProfile4513567D:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - Ref: dev3TierappasgInstanceRole0D6C703A
    Metadata:
      aws:cdk:path: dev-3Tier-App/dev-3Tier-app-asg/InstanceProfile
  dev3TierappasgLaunchConfigDCF74DDB:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      ImageId: ami-00a5245b4816c38e6
      InstanceType: t2.micro
      IamInstanceProfile:
        Ref: dev3TierappasgInstanceProfile4513567D
      SecurityGroups:
        - Fn::GetAtt:
            - dev3TierappasgInstanceSecurityGroupCD8FE5A9
            - GroupId
      UserData:
        Fn::Base64: |
          #!/bin/bash
    DependsOn:
      - dev3TierappasgInstanceRole0D6C703A
    Metadata:
      aws:cdk:path: dev-3Tier-App/dev-3Tier-app-asg/LaunchConfig
  dev3TierappasgASG130D9BC9:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      MaxSize: "4"
      MinSize: "0"
      DesiredCapacity: "2"
      LaunchConfigurationName:
        Ref: dev3TierappasgLaunchConfigDCF74DDB
      Tags:
        - Key: Name
          PropagateAtLaunch: true
          Value: dev-3Tier-App/dev-3Tier-app-asg
      TargetGroupARNs:
        - Ref: dev3TierinternallistenerfleetGroup7C212424
      VPCZoneIdentifier:
        - Fn::Select:
            - 0
            - Fn::Split:
                - ","
                - Fn::ImportValue: dev-3Tier-Root:VPCIsolatedSubnetIDs0BAB2DBD
        - Fn::Select:
            - 1
            - Fn::Split:
                - ","
                - Fn::ImportValue: dev-3Tier-Root:VPCIsolatedSubnetIDs0BAB2DBD
    UpdatePolicy:
      AutoScalingScheduledAction:
        IgnoreUnmodifiedGroupSizeProperties: true
    Metadata:
      aws:cdk:path: dev-3Tier-App/dev-3Tier-app-asg/ASG
  dev3TierappB3CC3F8F:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: dev-3Tier-App/dev-3Tier-app
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        []
      Tags:
        - Key: Name
          Value: dev-3Tier-app
      VpcId:
        Fn::ImportValue: dev-3Tier-Root:VPCVpcId2F75874A
    Metadata:
      aws:cdk:path: dev-3Tier-App/dev-3Tier-app/Resource
  dev3Tierappfromdev3TierAppdev3Tierinternalsg26D01EA480801FA748EC:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: from dev3TierAppdev3Tierinternalsg26D01EA4:8080
      FromPort: 8080
      GroupId:
        Fn::GetAtt:
          - dev3TierappB3CC3F8F
          - GroupId
      SourceSecurityGroupId:
        Fn::GetAtt:
          - dev3Tierinternalsg54F660BD
          - GroupId
      ToPort: 8080
    Metadata:
      aws:cdk:path: dev-3Tier-App/dev-3Tier-app/from
        dev3TierAppdev3Tierinternalsg26D01EA4:8080
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Modules: aws-cdk=0.22.0,@aws-cdk/assets=0.22.0,@aws-cdk/aws-autoscaling=0.22.0,@aws-cdk/aws-autoscaling-common=0.22.0,@aws-cdk/aws-cloudformation=0.22.0,@aws-cdk/aws-cloudfront=0.22.0,@aws-cdk/aws-cloudwatch=0.22.0,@aws-cdk/aws-codedeploy-api=0.22.0,@aws-cdk/aws-codepipeline-api=0.22.0,@aws-cdk/aws-ec2=0.22.0,@aws-cdk/aws-elasticloadbalancingv2=0.22.0,@aws-cdk/aws-events=0.22.0,@aws-cdk/aws-iam=0.22.0,@aws-cdk/aws-kms=0.22.0,@aws-cdk/aws-lambda=0.22.0,@aws-cdk/aws-s3=0.22.0,@aws-cdk/aws-s3 [...]
Outputs:
  dev3TierappSecurityGroupId8ADD0104:
    Value:
      Fn::GetAtt:
        - dev3TierappB3CC3F8F
        - GroupId
    Export:
      Name: dev-3Tier-App:dev3TierappSecurityGroupId8ADD0104
